Fix copy not centered in footer component

--- a/apps/website/src/components/app-footer/app-footer.scss
+++ b/apps/website/src/components/app-footer/app-footer.scss
@@ -146,6 +146,7 @@
       grid-area: copy;
 
       display: flex;
+      align-items: center;
       gap: 10rem;
 
       font-size: 1.5rem;
